--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>你好，GitHub</title>
+    <title>哭阿，GitHub</title>
   </head>
   <body>
-    <h1>覺得厲害</h1>
+    <h1>詹皓宇's 網站</h1>
   </body>
 </html>
 
