--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>哭阿，GitHub</title>
-  </head>
-  <body>
-    <h1>詹皓宇's 網站</h1>
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <title>哭阿 Github</title>
+    </head>
+    <body>
+        <h1>
+            <font size="7">
+                <font color="ff0000"> 詹 </font>
+                <font color="ff8000">皓 </font>
+                <font color="0080ff">宇 </font>
+            </font>
+            <font size="5">
+                <font color="000000"> 's FILE</font>
+            </font>
+        </h1>
+        <hr>
+        <strong>
+            <ol></ol>
+            <li>
+                這是我的  
+                <a href="https://www.facebook.com/henry.chan.5686322/"> fb </a>
+            </li>
+            <li>
+                聯絡
+                <a href="mailto:henryt711kj@gmail.com"> 我 </a>
+            </li>
+            <li>
+                想不到以後再補
+            </li>
+        </strong>
+        
+    </body>
 </html>
-
