--- a/index.html
+++ b/index.html
@@ -33,3 +33,9 @@
         
     </body>
 </html>
+$ git add index.html
+
+$ git commit -m "add index"
+$ git remote add origin https://github.com/eddiekao/eddiekao.github.io.git
+
+$ git push -u origin master
